--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en >
+<html lang="en" >
 <head>
 	<meta charset="utf-8">
 	<title>    </title>
 
-
+	</head>
 <body background="/static/1.jpg">
 	<h3 align="center">
 		<font color= white face="lato" size="17">
